--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/preset-env": "^7.6.3",
     "@tridnguyen/config": "^2.3.1",
-    "@wdio/sauce-service": "^7.20.5",
-    "@wdio/selenium-standalone-service": "^5.13.2",
+    "@wdio/sauce-service": "7.20.5",
+    "@wdio/selenium-standalone-service": "5.13.2",
     "allure-commandline": "^2.17.2",
     "appium": "^1.22.3",
     "babel-core": "^6.26.3",
@@ -70,8 +70,8 @@
     "css-loader": "^1.0.1",
     "debug": "^4.1.1",
     "deepmerge": "^3.3.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^5.0.3",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb-base": "5.0.3",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-sitegenesis": "~1.0.0",
     "globalize": "^1.4.2",
@@ -96,11 +96,11 @@
     "sinon": "^1.17.7",
     "style-loader": "^0.21.0",
     "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^17.0.0",
-    "stylelint-scss": "^2.5.0",
+    "stylelint-config-standard": "17.0.0",
+    "stylelint-scss": "2.5.0",
     "url": "^0.11.0",
-    "wdio-sauce-service": "^0.4.14",
-    "webdriverio": "^5.14.5",
+    "wdio-sauce-service": "0.4.14",
+    "webdriverio": "5.14.5",
     "xml2js": "^0.4.22"
   },
   "dependencies": {
