--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "deepmerge": "^3.3.0",
     "eslint": "3.19.0",
     "eslint-config-airbnb-base": "5.0.3",
-    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-import": "1.16.0",
     "eslint-plugin-sitegenesis": "~1.0.0",
     "globalize": "^1.4.2",
     "husky": "^4.2.5",
@@ -94,8 +94,8 @@
     "shelljs": "^0.8.5",
     "should": "^13.2.3",
     "sinon": "^1.17.7",
-    "style-loader": "^0.21.0",
-    "stylelint": "^13.13.1",
+    "style-loader": "0.21.0",
+    "stylelint": "13.13.1",
     "stylelint-config-standard": "17.0.0",
     "stylelint-scss": "2.5.0",
     "url": "^0.11.0",
