--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/preset-env": "^7.6.3",
     "@tridnguyen/config": "^2.3.1",
-    "@wdio/sauce-service": "7.20.5",
-    "@wdio/selenium-standalone-service": "5.13.2",
+    "@wdio/sauce-service": "^7.20.5",
+    "@wdio/selenium-standalone-service": "^5.13.2",
     "allure-commandline": "^2.17.2",
     "appium": "^1.22.3",
     "babel-core": "^6.26.3",
@@ -70,9 +70,9 @@
     "css-loader": "^1.0.1",
     "debug": "^4.1.1",
     "deepmerge": "^3.3.0",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb-base": "5.0.3",
-    "eslint-plugin-import": "1.16.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^5.0.3",
+    "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-sitegenesis": "~1.0.0",
     "globalize": "^1.4.2",
     "husky": "^4.2.5",
@@ -94,13 +94,13 @@
     "shelljs": "^0.8.5",
     "should": "^13.2.3",
     "sinon": "^1.17.7",
-    "style-loader": "0.21.0",
-    "stylelint": "13.13.1",
-    "stylelint-config-standard": "17.0.0",
-    "stylelint-scss": "2.5.0",
+    "style-loader": "^0.21.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-scss": "^2.5.0",
     "url": "^0.11.0",
-    "wdio-sauce-service": "0.4.14",
-    "webdriverio": "5.14.5",
+    "wdio-sauce-service": "^0.4.14",
+    "webdriverio": "^5.14.5",
     "xml2js": "^0.4.22"
   },
   "dependencies": {
@@ -114,7 +114,10 @@
     "last 2 versions",
     "ie >= 10"
   ],
-  "packageName": "app_storefront_base",
+  "packageName": "app_custom_cartridge",
+  "paths": {
+    "base": "./cartridges/app_storefront_base/"
+  },
   "babel": {
     "presets": [
       "env"
