--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "last 2 versions",
     "ie >= 10"
   ],
-  "packageName": "app_custom_cartridge",
+  "packageName": "app_storefront_base",
   "paths": {
     "base": "./cartridges/app_storefront_base/"
   },
