--- a/package.json
+++ b/package.json
@@ -99,8 +99,8 @@
     "stylelint-config-standard": "^17.0.0",
     "stylelint-scss": "^2.5.0",
     "url": "^0.11.0",
-    "wdio-sauce-service": "^0.4.14",
-    "webdriverio": "^5.14.5",
+    "wdio-sauce-service": "0.4.14",
+    "webdriverio": "5.14.5",
     "xml2js": "^0.4.22"
   },
   "dependencies": {
