--- a/package.json
+++ b/package.json
@@ -96,8 +96,8 @@
     "sinon": "^1.17.7",
     "style-loader": "^0.21.0",
     "stylelint": "^13.13.1",
-    "stylelint-config-standard": 17.0.0",
-    "stylelint-scss": "^2.5.0",
+    "stylelint-config-standard": "17.0.0",
+    "stylelint-scss": "2.5.0",
     "url": "^0.11.0",
     "wdio-sauce-service": "0.4.14",
     "webdriverio": "^5.14.5",
