--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/preset-env": "^7.6.3",
     "@tridnguyen/config": "^2.3.1",
-    "@wdio/sauce-service": "7.20.5",
-    "@wdio/selenium-standalone-service": "5.13.2",
+    "@wdio/sauce-service": "5.9.3",
+    "@wdio/selenium-standalone-service": "5.9.3",
     "allure-commandline": "^2.17.2",
     "appium": "^1.22.3",
     "babel-core": "^6.26.3",
@@ -95,9 +95,9 @@
     "should": "^13.2.3",
     "sinon": "^1.17.7",
     "style-loader": "^0.21.0",
-    "stylelint": "^13.13.1",
+    "stylelint": "8.2.0",
     "stylelint-config-standard": "17.0.0",
-    "stylelint-scss": "2.5.0",
+    "stylelint-scss": "2.1.0",
     "url": "^0.11.0",
     "wdio-sauce-service": "0.4.14",
     "webdriverio": "^5.14.5",
