--- a/package.json
+++ b/package.json
@@ -100,11 +100,11 @@
     "stylelint-scss": "2.1.0",
     "url": "^0.11.0",
     "wdio-sauce-service": "0.4.14",
-    "webdriverio": "^5.14.5",
+    "webdriverio": "5.14.5",
     "xml2js": "^0.4.22"
   },
   "dependencies": {
-    "bootstrap": "4.6.1",
+    "bootstrap": "4.4.1",
     "cleave.js": "^1.5.3",
     "flag-icon-css": "^2.9.0",
     "font-awesome": "^4.7.0",
