US-0000239 Demo - Metadata Object

--- a/cartridges/app_storefront_base/cartridge/templates/resources/payment.properties
+++ b/cartridges/app_storefront_base/cartridge/templates/resources/payment.properties
@@ -13,7 +13,7 @@ error.payment.lastname.range.invalid=The last name must be between 1 and 50 char
 error.card.info.missing=This field is required.
 
 button.addnew=Add New
-button.confirm=Yes
+button.confirm={!New Features Activation}
 button.cancel=Cancel
 
 link.edit=Edit
