--- a/cartridges/app_storefront_base/cartridge/templates/resources/address.properties
+++ b/cartridges/app_storefront_base/cartridge/templates/resources/address.properties
@@ -40,6 +40,6 @@ msg.delete.address.confirmation.modal=Are you sure you want to remove the follow
 msg.no.saved.addresses=No saved addresses
 
 button.cancel=Cancel
-button.confirm=Yes
+button.confirm={!New Features Activation}
 
 aria.delete.address.dialog.title=Delete Address Dialog
