--- a/cartridges/app_storefront_base/cartridge/templates/resources/cart.properties
+++ b/cartridges/app_storefront_base/cartridge/templates/resources/cart.properties
@@ -1,6 +1,6 @@
 action.enter.promo.code=Enter promo code (optional)
 
-button.confirm=Yes
+button.confirm={!New Features Activation}
 button.cancel=Cancel
 button.checkout=Checkout
 button.submit.promo.code=Submit
