--- a/cartridges/app_storefront_base/cartridge/templates/resources/common.properties
+++ b/cartridges/app_storefront_base/cartridge/templates/resources/common.properties
@@ -66,7 +66,7 @@ label.close.dialog.button=Close dialog
 error.csrf.token.mismatch=CSRF Token Mismatch
 
 heading.consentTracking.track.consent=Tracking Consent
-button.consentTracking.yes=Yes
+button.consentTracking.yes={!New Features Activation}
 button.consentTracking.no=No
 
 msg.assistive.selected.text=selected
